@@ -58,6 +58,7 @@
   </p>
 
   <h2>Documentation</h2>
+
   <table class="contentstable" align="center" style="margin-left: 30px"><tr>
     <td width="50%">
       <p class="biglink"><a class="biglink" href="{{ pathto("contents") }}">Contents</a><br/>
@@ -71,6 +72,14 @@
          <span class="linkdescr">quick access to all documented modules</span></p>
     </td></tr>
   </table>
+
+  <p>You may also be interested in the very nice
+    <a href="http://matplotlib.sourceforge.net/sampledoc/">tutorial</a> on how to
+    create a customized documentation using Sphinx written by the matplotlib
+    developers.</p>
+
+  <p>There is a <a href="http://sphinx.shibu.jp/">Japanese translation</a>
+    of this documentation, thanks to Yoshiki Shibukawa.</p>
 
   <h2>Get Sphinx</h2>
   <p>
