@@ -14,6 +14,7 @@ import re
 import sys
 import stat
 import time
+import errno
 import types
 import shutil
 import fnmatch
@@ -68,7 +69,8 @@ def ensuredir(path):
     try:
         os.makedirs(path)
     except OSError, err:
-        if not err.errno == 17:
+        # 0 for Jython/Win32
+        if err.errno not in [0, getattr(errno, 'EEXIST', 0)]:
             raise
 
 
@@ -415,7 +417,7 @@ def copyfile(source, dest):
     try:
         # don't do full copystat because the source may be read-only
         copytimes(source, dest)
-    except shutil.Error:
+    except OSError:
         pass
 
 
